# seal_expansion

./: README.md  readme.txt
SEAL/native/examples/: 10_sort_TwoCipher_taylor.cpp  11_sort_TwoCipher_f.cpp  12_sort_TwoCipher_gf.cpp  13_sort_TwoCipher_LS.cpp  14_train.cpp  15_test.cpp  20_relu_taylor.cpp  21_relu_f.cpp  22_relu_gf.cpp  23_relu_LS.cpp  30_test_relu_taylor.cpp  31_test_relu_f.cpp  32_test_relu_gf.cpp  33_test_relu_LS.cpp  40_knn_taylor.cpp  41_knn_f.cpp  42_knn_gf.cpp  4_ckks_basics.cpp  50_run_floatadd1.cpp  51_run_floatsub1.cpp  52_run_floatmul1.cpp  7_performance.cpp  CMakeLists.txt  examples.cpp  examples.h  relu.h  sort_Cipher.h  test.h
SEAL/native/tests/seal/: context.cpp
cnn_a+b/: a.out  cnn_a+b.cpp  cnn_a+b.out  out.txt  test.out
cnn_a+b/cnn_a+b.out.dSYM/Contents/: Info.plist
cnn_a+b/cnn_a+b.out.dSYM/Contents/Resources/DWARF/: cnn_a+b.out
cnn_a+b/test.out.dSYM/Contents/Resources/DWARF/: test.out
cnn_mnist/: a.out  cnn_mnist.cpp  cnn_mnist.out  out.txt
cnn_mnist/cnn_mnist.out.dSYM/Contents/: Info.plist
cnn_mnist/cnn_mnist.out.dSYM/Contents/Resources/DWARF/: cnn_mnist.out
knn_mnist/: a.out  knn_mnist.cpp  knn_mnist.out
knn_mnist/knn_mnist.out.dSYM/Contents/: Info.plist
knn_mnist/knn_mnist.out.dSYM/Contents/Resources/DWARF/: knn_mnist.out
